<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="50dp"
    tools:context=".activities.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_a_comment"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:textSize="18sp">
    </TextView>
    <EditText
        android:id="@+id/editText_comment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/type_a_comment"
        android:gravity="top"
        android:inputType="text"
        android:autofillHints="email">
    </EditText>
    <Button
        android:id="@+id/button_submit_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_comment"
        android:layout_gravity="center">
    </Button>
</LinearLayout>